<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/InstrumentTest1Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00cc66"
    tools:context="com.alarm.georgia.bsg_musicality.InstrumentTest1">

    <TextView
        android:id="@+id/InstrTest1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="46dp"
        android:text="@string/InstrTestTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ReturnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/MusicTest"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_toEndOf="@+id/InstrTest1Text"
        android:layout_toRightOf="@+id/InstrTest1Text"
        android:clickable="true"
        android:focusable="true"
        android:onClick="ReturnToMenu"
        android:text="@string/menu" />

    <TextView
        android:id="@+id/MusicTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/InstrTest1Text"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/InstrTest1Text"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="DoMusicTest"
        android:text="@string/MusicTest" />

    <TextView
        android:id="@+id/exitTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="ExitGame"
        android:text="@string/ExitTest" />

</RelativeLayout>
